# ghidra-tigress-deobf

./: .gitignore  Dockerfile  README.md  evaluation.sh  pyproject.toml  run_docker.sh
evaluation/: bkdrhash.c.out  bkdrhash.obf.c.out  bkdrhash_obf_BKDRHash.dec.c.out  bkdrhash_sobf_BKDRHash.dec.c.out  bphash.c.out  bphash.obf.c.out  bphash_obf_BPHash.dec.c.out  bphash_sobf_BPHash.dec.c.out  create_custom_tests.py  create_inputs.py  create_tests.py  dekhash.c.out  dekhash.obf.c.out  dekhash_obf_DEKHash.dec.c.out  dekhash_sobf_DEKHash.dec.c.out  djbhash.c.out  djbhash.obf.c.out  djbhash_obf_DJBHash.dec.c.out  djbhash_sobf_DJBHash.dec.c.out  elfhash.c.out  elfhash.obf.c.out  elfhash_obf_ELFHash.dec.c.out  elfhash_sobf_ELFHash.dec.c.out  evaluation_custom_step1.sh  evaluation_custom_step2.sh  evaluation_custom_step3.sh  evaluation_step1.sh  evaluation_step2.sh  evaluation_step3.sh  fnvhash.c.out  fnvhash.obf.c.out  fnvhash_obf_FNVHash.dec.c.out  fnvhash_sobf_FNVHash.dec.c.out  jshash.c.out  jshash.obf.c.out  jshash_obf_JSHash.dec.c.out  jshash_sobf_JSHash.dec.c.out  main.c  main_fib_obf.c  main_obf.c  (+15 more)
samples/: LICENSE  bkdrhash.obf.c.out.toml  bkdrhash.sobf.c  bkdrhash.sobf.c.out  bkdrhash.sobf.c.out.toml  bphash.obf.c.out.toml  bphash.sobf.c  bphash.sobf.c.out.toml  dekhash.obf.c  dekhash.obf.c.out.toml  dekhash.sobf.c.out  dekhash.sobf.c.out.toml  djbhash.obf.c  djbhash.obf.c.out.toml  djbhash.sobf.c  djbhash.sobf.c.out  djbhash.sobf.c.out.toml  elfhash.obf.c  elfhash.obf.c.out  elfhash.obf.c.out.toml  elfhash.sobf.c.out  elfhash.sobf.c.out.toml  fnvhash.obf.c.out.toml  (+49 more)
(+92 files in other folders)
