[tool.poetry]
name = "ghidra-tigress-deobf"
version = "0.1.0"
description = ""
authors = ["Trattue <63713970+Trattue@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "gtd", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
angr = "^9.2.112 "
setuptools = "^71.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "gtd.__main__:main"
auto = "gtd-auto.__main__:auto_main"
pre = "gtd-pre.__main__:pre_main"
foo = "gtd-pre.__main__:main"
